Task instance Java/22